--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -6,13 +6,17 @@
             android:title="@string/add_story"
             android:icon = "@drawable/ic_outline_add_box_24"
             app:showAsAction="ifRoom" />
+        <item android:id="@+id/maps"
+            android:title="@string/map"
+            android:icon = "@drawable/ic_baseline_map_24"
+            app:showAsAction="ifRoom" />
         <item android:id="@+id/language"
             android:title="@string/language"
             android:icon="@drawable/ic_baseline_language_24"
-            app:showAsAction="always"/>
+            app:showAsAction="ifRoom"/>
         <item android:id="@+id/logout"
             android:title="@string/logout"
             android:icon="@drawable/ic_baseline_exit_to_app_24"
-            app:showAsAction="always"/>
+            app:showAsAction="ifRoom"/>
     </group>
 </menu>
